Fixed icon size and landing page text-wrap

--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ a:hover {
 }
 
 .nav-icon{
-   font-size:30px;
+   font-size:50px;
    cursor:pointer;
    display: block;
    text-align: right;
